[package]
name = "simplesocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots", "native-tls"] }
futures = "*"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
js-sandbox = "0.1.6"
lazy_static = "1.4.0"