[package]
name = "simplesocket"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Implementation of Robot_Engine's SimpleSocket in rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots", "native-tls"] }
futures = "*"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
async-trait = "0.1.56"